fix: now 변수 제거 및 예외처리
# Conflicts:
#	src/main/java/com/goggles/mentoring_service/application/command/BookingCommand.java
#	src/main/java/com/goggles/mentoring_service/application/service/BookingService.java
#	src/main/java/com/goggles/mentoring_service/domain/booking/BookingSession.java
#	src/main/java/com/goggles/mentoring_service/domain/mentoring/MentoringSession.java
#	src/main/java/com/goggles/mentoring_service/presentation/BookingController.java
#	src/test/java/com/goggles/mentoring_service/application/service/BookingServiceIntegrationTest.java
#	src/test/java/com/goggles/mentoring_service/application/service/BookingServiceTest.java