@@ -286,10 +286,12 @@ class BookingServiceTest {
     log.info("==== 회차 목록 조회 결과 ====");
     log.info("sessions: {}", result.sessions().size());
 
-    assertThat(result.sessions()).hasSize(1);
-    assertThat(result.sessions().get(0).progressStatus()).isEqualTo(SessionProgressStatus.SCHEDULED);
-    verify(bookingRepository).findById(any());
-  }
+		assertThat(result.sessions()).hasSize(1);
+		assertThat(result.sessions()
+				.getFirst()
+				.progressStatus()).isEqualTo(SessionProgressStatus.SCHEDULED);
+		verify(bookingRepository).findById(any());
+	}
 
   @Test
   void getBookingSessions_bookingNotFound() {
@@ -318,22 +320,27 @@ class BookingServiceTest {
 
   // ── completeSession ───────────────────────────────────────────────────────
 
-  @Test
-  void completeSession_success() {
-    MentoringBooking booking = acceptedBooking();
-    UUID sessionId = booking.getBookingSessions().get(0).getId();
-    given(bookingRepository.findById(any())).willReturn(Optional.of(booking));
+	@Test
+	void completeSession_success() {
+		MentoringBooking booking = acceptedBooking();
+		UUID sessionId = booking.getBookingSessions()
+				.getFirst()
+				.getId();
+		given(bookingRepository.findById(any())).willReturn(Optional.of(booking));
 
     bookingService.completeSession(
         new BookingCommand.CompleteSession(
             booking.getMentoringBookingId().bookingId(), sessionId, MENTOR_ID, UserType.INSTRUCTOR));
 
-    log.info("==== 회차 진행 처리 결과 ====");
-    log.info("progressStatus: {}", booking.getBookingSessions().get(0).getProgressStatus());
+		log.info("==== 회차 진행 처리 결과 ====");
+		log.info("progressStatus: {}", booking.getBookingSessions()
+				.getFirst()
+				.getProgressStatus());
 
-    assertThat(booking.getBookingSessions().get(0).getProgressStatus())
-        .isEqualTo(SessionProgressStatus.COMPLETED);
-  }
+		assertThat(booking.getBookingSessions()
+				.getFirst()
+				.getProgressStatus()).isEqualTo(SessionProgressStatus.COMPLETED);
+	}
 
   @Test
   void completeSession_bookingNotFound() {
@@ -349,52 +356,43 @@ class BookingServiceTest {
 
   // ── rescheduleSession ─────────────────────────────────────────────────────
 
-  @Test
-  void rescheduleSession_success() {
-    MentoringBooking booking = acceptedBooking();
-    UUID sessionId = booking.getBookingSessions().get(0).getId();
-    Mentoring mentoring =
-        defaultMentoringBuilder()
-            .sessions(List.of(session(SESSION_DATE), session(RESCHEDULE_DATE)))
-            .build();
-    given(bookingRepository.findById(any())).willReturn(Optional.of(booking));
-    given(mentoringRepository.findById(any())).willReturn(Optional.of(mentoring));
+	@Test
+	void rescheduleSession_success() {
+		MentoringBooking booking = acceptedBooking();
+		UUID sessionId = booking.getBookingSessions()
+				.getFirst()
+				.getId();
+		Mentoring mentoring = defaultMentoringBuilder().sessions(
+						List.of(session(SESSION_DATE), session(RESCHEDULE_DATE)))
+				.build();
+		given(bookingRepository.findById(any())).willReturn(Optional.of(booking));
+		given(mentoringRepository.findById(any())).willReturn(Optional.of(mentoring));
 
-    bookingService.rescheduleSession(
-        new BookingCommand.RescheduleSession(
-            booking.getMentoringBookingId().bookingId(),
-            sessionId,
-            RESCHEDULE_DATE,
-            SESSION_START_TIME,
-            SESSION_END_TIME,
-            MENTOR_ID,
-            UserType.INSTRUCTOR,
-            NOW_BEFORE_SESSION));
+		bookingService.rescheduleSession(new BookingCommand.RescheduleSession(
+				booking.getMentoringBookingId()
+						.bookingId(), sessionId, RESCHEDULE_DATE, SESSION_START_TIME,
+				SESSION_END_TIME, MENTOR_ID, UserType.INSTRUCTOR));
 
-    log.info("==== 회차 일정 변경 결과 ====");
-    log.info("sessionDate: {}", booking.getBookingSessions().get(0).getSessionDate());
+		log.info("==== 회차 일정 변경 결과 ====");
+		log.info("sessionDate: {}", booking.getBookingSessions()
+				.getFirst()
+				.getSessionDate());
 
-    assertThat(booking.getBookingSessions().get(0).getSessionDate()).isEqualTo(RESCHEDULE_DATE);
-  }
+		assertThat(booking.getBookingSessions()
+				.getFirst()
+				.getSessionDate()).isEqualTo(RESCHEDULE_DATE);
+	}
 
   @Test
   void rescheduleSession_bookingNotFound() {
     given(bookingRepository.findById(any())).willReturn(Optional.empty());
 
-    assertThatThrownBy(
-            () ->
-                bookingService.rescheduleSession(
-                    new BookingCommand.RescheduleSession(
-                        UUID.randomUUID(),
-                        UUID.randomUUID(),
-                        RESCHEDULE_DATE,
-                        SESSION_START_TIME,
-                        SESSION_END_TIME,
-                        MENTOR_ID,
-                        UserType.INSTRUCTOR,
-                        NOW_BEFORE_SESSION)))
-        .isInstanceOf(BookingNotFoundException.class);
-  }
+		assertThatThrownBy(() -> bookingService.rescheduleSession(
+				new BookingCommand.RescheduleSession(UUID.randomUUID(), UUID.randomUUID(),
+						RESCHEDULE_DATE, SESSION_START_TIME, SESSION_END_TIME, MENTOR_ID,
+						UserType.INSTRUCTOR))).isInstanceOf(
+				BookingNotFoundException.class);
+	}
 
   @Test
   void getMyBookings_empty() {
